--- a/templates/index.html
+++ b/templates/index.html
@@ -158,6 +158,8 @@
         <textarea name="prompt" rows="4" cols="50" required></textarea><br>
         <label for="tone">Tone of the email</label><br>
         <input type="text" name="tone" required><br><br>
+        <label for="length">Length of the email</label><br>
+        <input type="text" name="length" required><br><br>
         <label for="recipient">Recipient Name</label><br>
         <input type="text" name="recipient" required><br><br>
         <input type="submit" value="Generate Email">
