--- a/templates/index.html
+++ b/templates/index.html
@@ -149,6 +149,8 @@
     </div>
   </nav>
 <body>
+  <div style="margin-left: 1.5%; padding-top: 2%;" href="#"><h6 class="heding">By Kotha Srivibhu - VIT Chennai</h6></div>
+
   <div class="mgn">
     <br>
     <h4 align="center">Please Provide The details</h4>
